--- a/style/scss/partials/_variables.scss
+++ b/style/scss/partials/_variables.scss
@@ -1,2 +1,8 @@
-$colorPrincipal: #da291c;
-$colorSecundario: #333333;
+$colorPrincipal: #009CDE;
+$colorSecundario: #020097;
+$colorTerciario: #333333;
+$colorGris: #535461;
+$colorGrisClaro: #a0a0a0;
+$colorFooter: hsl(211, 10%, 61%) !important;
+$colorBorderGrey: #e0eaef;
+$colorBorderNavbar: #d6d6d6;
