--- a/templates/ayuda.html
+++ b/templates/ayuda.html
@@ -17,15 +17,24 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../style/bootstrap/bootstrap.min.css">
     <title>Inicio</title>
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/d4412fafd7.js" crossorigin="anonymous"></script>
+    <title>Centro de ayuda | Connect</title>
+    <meta name="description" content="Busca entre las preguntas más frecuentes o hacé tu consulta">
+    <meta name="keywords" content="AYUDA, SOPORTE, CONTACTO, PREGUNTA">
 </head>
 
 <body>
     <header>
         <!-- Nav tabs -->
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a href="../index.html"><img class="navbar-logo-solo" src="../img/connect-logo-solo.svg" alt=""></a>
-                <a href="../index.html"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
+                <div class="navbar_imagotipo">
+                    <a href="../index.html"><img class="navbar-isotipo" src="../img/isotipo.svg" alt="isotipo"></a>
+                    <a href="../index.html"><img class="navbar-logotipo" src="../img/logotipo.svg" alt="logotipo"></a>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav menu">
                         <li class="nav-item">
-                            <a class="nav-link active" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../templates/servicios.html">Servicios</a>
@@ -42,11 +51,10 @@
                             <a class="nav-link" href="../templates/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../templates/ayuda.html">Ayuda</a>
+                            <a class="nav-link activo" href="../templates/ayuda.html">Ayuda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-0 nav-link-login" href="../templates/login.html">Iniciar Sesión <i
-                                    class="bi bi-person"></i></a>
+                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i class="bi bi-person-circle"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -58,10 +66,10 @@
     <!---------------------------------->
 
     <main class="container">
-        <div class="titulo">
+        <div class="titulo wow animate__animated animate__fadeInDown">
             <h1>Centro de ayuda</h1>
         </div>
-        <div>
+        <div class="wow animate__animated animate__fadeIn">
             <div class="mb-3">
                 <h3>Preguntas frecuentes</h3>
             </div>
@@ -160,7 +168,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-center m-5">
+        <div class="text-center m-5 wow animate__animated animate__fadeIn">
             <h3>¿No encontraste lo que buscabas?</h3>
         </div>
         <div class="container ayuda__contacto row justify-content-center">
@@ -180,7 +188,9 @@
                     <label for="exampleFormControlTextarea1" class="form-label">Escribí tu consulta</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <button>Enviar</button>
+                <div class="form__button">
+                    <button class="btn boton">Enviar</button>
+                </div>
             </form>
             <div class="contacto__medios col-md-8 col-lg-6 col-xl-5">
                 <div class="atencion-cliente mb-4">
@@ -205,20 +215,26 @@
     <!---------------------------------->
 
     <footer>
-        <div class="redes">
-            <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
-            <a href="" class="footer-redes"><i class="bi bi-twitter"></i></a>
-            <a href="" class="footer-redes"><i class="bi bi-instagram"></i></a>
-            <a href="" class="footer-redes"><i class="bi bi-linkedin"></i></a>
-        </div>
         <div class="copy">
+            <img class="mb-1" src="../img/default-monochrome-footer.svg" alt="logotipo gris">
             <p>Connect ©2023</p>
             <p>Todos los derechos reservados</p>
+        </div>
+        <div class="redes">
+            <a href="" class="footer-redes"><i class="fa-brands fa-facebook"></i></a>
+            <a href="" class="footer-redes"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="" class="footer-redes"><i class="fa-brands fa-instagram"></i></a>
+            <a href="" class="footer-redes"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </footer>
 
     <!--Scripts Bootstrap-->
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <!-- WOW Scripts -->
+    <script src="../js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 
 </body>
 
